--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,15 @@
 :root{
     --primary-color: #29A354;
     --secondary-color: #167f3b;
+    --text-color: #0C0531;
 }
 
 html{
     scroll-behavior: smooth;
+}
+
+h1,h2,h3,h4,h5,p{
+    color: var(--text-color)
 }
 
 .navbar-nav{
@@ -100,5 +105,22 @@ html{
 
 .card-text .bi{
     margin-right: 10px;
+    color: var(--primary-color);
+}
+
+.brand{
+    color: var(--primary-color);
+}
+
+.foot_media a:hover{
+    .bi{
+        color: var(--primary-color);
+    }
+}
+
+.foot_content a{
+    color: var(--text-color);
+}
+.foot_content a:hover{
     color: var(--primary-color);
 }
